<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".lista_detalle">

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/campo_chico_derecha"
        android:paddingRight="10dp"
        android:textColor="@color/letra_negro"
        android:textSize="18sp"
        android:gravity="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="260dp"
        android:layout_marginRight="260dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/campo_chico_izquierda"
        android:paddingLeft="7dp"
        android:text="@string/etTotalDetalle"
        android:textColor="@color/letra_negro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="250dp"
        android:layout_marginRight="250dp"
        android:background="@drawable/campo_chico_izquierda"
        android:paddingLeft="7dp"
        android:paddingTop="3dp"
        android:text="@string/txtImporteMaximo"
        android:textColor="@color/letra_negro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etImporteMin"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/campo_chico_derecha"
        android:ems="10"
        android:inputType="numberDecimal"
        android:paddingLeft="3dp"
        android:paddingRight="5dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/etImporteMax" />

    <EditText
        android:id="@+id/etImporteMax"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/campo_chico_derecha"
        android:ems="10"
        android:inputType="numberDecimal"
        android:paddingLeft="3dp"
        android:paddingRight="5dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="250dp"
        android:layout_marginRight="250dp"
        android:background="@drawable/campo_chico_izquierda"
        android:paddingLeft="7dp"
        android:paddingTop="3dp"
        android:text="@string/txtImporteMinimo"
        android:textColor="@color/letra_negro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="250dp"
        android:layout_marginRight="250dp"
        android:background="@drawable/campo_chico_izquierda"
        android:paddingLeft="7dp"
        android:paddingTop="3dp"
        android:text="@string/etFechaInicial"
        android:textColor="@color/letra_negro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/etFechaInicial"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/campo_chico_derecha"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:foreground="?android:attr/selectableItemBackground"
        android:inputType="date"
        android:maxLines="1"
        android:onClick="onClickFechaInicial"
        android:paddingLeft="3dp"
        android:paddingRight="5dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/etImporteMin" />

    <EditText
        android:id="@+id/etFechaFinal"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/campo_chico_derecha"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:foreground="?android:attr/selectableItemBackground"
        android:inputType="date"
        android:maxLines="1"
        android:onClick="onClickFechaFinal"
        android:paddingLeft="3dp"
        android:paddingRight="5dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/etFechaInicial" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="250dp"
        android:layout_marginRight="250dp"
        android:background="@drawable/campo_chico_izquierda"
        android:paddingLeft="7dp"
        android:paddingTop="3dp"
        android:text="@string/etFechaFinal"
        android:textColor="@color/letra_negro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="250dp"
        android:layout_marginRight="250dp"
        android:background="@drawable/campo_chico_izquierda"
        android:paddingLeft="7dp"
        android:paddingTop="3dp"
        android:text="@string/txtCategoria"
        android:textColor="@color/letra_negro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Spinner
        android:id="@+id/spinnerCat"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/campo_chico_derecha"
        android:foreground="?android:attr/selectableItemBackground"
        android:popupBackground="@drawable/campo_chico_derecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/etFechaFinal" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/boton_principal"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="limpiar"
        android:text="@string/btnLimpiar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/spinnerCat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etFechaInicial"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/boton_principal"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="aplicarFiltro"
        android:text="@string/btnFiltrar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerCat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etImporteMax"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listGastos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/listas"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/tvTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCat" />

</android.support.constraint.ConstraintLayout>